--- a/templates/formular.html
+++ b/templates/formular.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Vlož poznámku</h1>
-    <form method="POST" action="/">
+    <form method="POST">
         {{ form.csrf_token }} <br>
         {{ form.poznamka() }} <br>
         <br>
