--- a/templates/vypis.html
+++ b/templates/vypis.html
@@ -2,16 +2,20 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>Poznámkovník</title>
+    <title>Aplikace on-line poznámky (Stejskal V3)</title>
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css">
 </head>
 <body>
-    <h1>Poznámky</h1>
+    <h1>On-line poznámky:</h1>
     <div class="flex-container">
-        {% for i in poznamky %}
-        <div><a href="/smaz/{{ i[0] }}">Smazat</a> <a href="/uprav/{{ i[0] }}">Upravit</a></div>
+        {% for i in vypis_poznamek %}
+        <h3>Zpráva:</h3>
         <div>{{ i[1] }}</div>
+        <h3>Vloženo:</h3>
         <div>{{ i[2] }}</div>
+        <h3>Důležitost:</h3>
+        <div>{{ i[3] }}</div>
+        <div><a href="/smaz/{{ i[0] }}">Smazat</a> <a href="/uprav/{{ i[0] }}">Upravit</a></div>
         {% endfor %}
     </div>
     <br>
